--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,49 @@
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 /* Wildcard selector to override default browser styles */
 * {
     padding: 0%;
     margin: 0;
 }
+
 /* Header */
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4, 9, 28, 0.7),rgba(4, 9, 28, 0.7)), url(../images/BG3_Party.0.png);
+    background-image: linear-gradient(rgba(4, 9, 28, 0.7), rgba(4, 9, 28, 0.7)), url(../images/BG3_Party.0.png);
     position: relative;
     background-position: center;
-    background-size: cover;
+    background-size: cflexover;
 
+}
+
+nav {
+    display: flex;
+    padding: 2% 6%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav img {
+    width: 200px;
+
+}
+
+.navigation-links {
+    flex: 1;
+    text-align: right;
+}
+
+.navigation-links ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 7px 11px;
+    position: relative;
+}
+
+.navigation-links ul li a {
+    text-decoration: none;
+    font-size: 14px;
+    color: #fff;
 }
