--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,18 @@
     padding: 0%;
     margin: 0;
 }
+/* General styles */
+h1, h2, h3 {
+    font-family: 'Roboto', sans-serif;
+    color: #fff;
+}
+body {
+    font-family: "Roboto Slab", sans-serif;
+    color: #fff;
+}
 
 /* Header */
+
 .header {
     min-height: 100vh;
     width: 100%;
@@ -58,4 +68,22 @@ nav img {
 }
 .navigation-links ul li:hover::after {
     width: 100%;
+}
+.text {
+    width: 90%;
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+.text h1 {
+    font-size: 70px;
+    letter-spacing: 2px;
+}
+.text p {
+    margin: 10px 0 40px;
+    font-size: 20px;
+    letter-spacing: 1px;
 }
