--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,3 +105,26 @@ nav img {
     transition: 1s;
 
 }
+@media (max-width: 700px) {
+    .text h1 {
+        font-size: 20px;
+        letter-spacing: 1px;
+    }
+    .navigation-links ul li {
+        display: block;
+
+    }
+    .navigation-links {
+        position: absolute;
+        background: #ff4591;
+        height: 100vh;
+        width: 200px;
+        text-align: left;
+        top: 0;
+        right: 0;
+        z-index: 2;
+
+    }
+    
+    
+}
