--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ body {
     background-size: cflexover;
 
 }
-
+/* Navbar styles */
 nav {
     display: flex;
     padding: 2% 6%;
@@ -69,6 +69,7 @@ nav img {
 .navigation-links ul li:hover::after {
     width: 100%;
 }
+/* Heading text styles */
 .text {
     width: 90%;
     color: #fff;
@@ -105,6 +106,11 @@ nav img {
     transition: 1s;
 
 }
+nav .fa {
+    display: none;
+}
+
+/* Media Queries */
 @media (max-width: 700px) {
     .text h1 {
         font-size: 20px;
@@ -123,6 +129,15 @@ nav img {
         top: 0;
         right: 0;
         z-index: 2;
+
+    } 
+    nav .fa {
+        color: #fff;
+        display: block;
+        cursor: pointer;
+        font-size: 22px;
+        margin: 10px;
+        
 
     }
     
